# Resume-PDF-Agent

./: .gitignore  PROJECT_STATUS.md  README.en.md  README.md  TODO.md  pyproject.toml
docs/: architecture_diagram_v0.md  architecture_v0.md  browser_confirmation_ui_v0.md  browser_jd_upload_ui_v0.md  browser_llm_application_preview_ui_v0.md  browser_llm_rewrite_review_ui_v0.md  bullet_enhancement_engine_v0.md  commercial_product_roadmap_v0.md  criteria_knowledge_base_v0.md  demo_walkthrough_v0.md  frontend_basic_workflow_page_v0.md  frontend_ui_polish_v0.md  gap_analysis_engine_v0.md  github_project_overview_v0.md  github_release_notes_v0.1.0.md  html_rendering_v0.md  internal_template_matching_v0.md  launch_notes_v0.md  limitations_and_roadmap_v0.md  llm_assisted_rewriting_v0.md  llm_candidate_application_planning_v0.md  llm_human_final_edit_instruction_pack_v0.md  llm_manual_approval_checklist_v0.md  llm_manual_patch_preview_v0.md  llm_pre_application_validation_v0.md  llm_review_decision_summary_v0.md  m27_1_strict_validation_report.md  optional_api_layer_v0.md  pdf_generation_pipeline_v0.md  product_spec_v0.md  production_pdf_backend_setup_v0.md  promotion_copy_v0.md  release_checklist_v0.md  release_validation_report_v0.md  resume_type_classifier_v0.md  schema_design_v0.md  truthfulness_checker_v0.md  user_confirmation_workflow_v0.md  user_provided_jd_parser_v0.md  visual_regression_testing_v0.md  (+1 more)
examples/: README.md  demo_output_manifest_v0.md  sample_data_science_demo.md
scripts/: run_api_dev_server.py  run_demo_workflow.py  run_visual_regression_checks.py  (+2 more)
(+323 files in other folders)
