[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-pdf-agent"
version = "0.1.0"
description = "Career-profile-based AI resume PDF generation agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "jinja2",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
resume-pdf-agent = "resume_pdf_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
